添加OSS服务，实现后台用户管理，实现医院客户端详情到医院服务的迁移